--- a/src/index.css
+++ b/src/index.css
@@ -25,6 +25,18 @@ header {
   padding-block: 10px;
 }
 
+footer {
+  background-color: #161616;
+  color: #AAAAAA;
+  height: 74px;
+  display: flex;
+  flex-shrink: 0;
+  justify-content: center;
+  align-items: center;
+  margin-top: auto;
+  font-weight: 500;
+}
+
 header .site-logo {
   color: black;
   margin-right: auto;
