--- a/src/index.css
+++ b/src/index.css
@@ -184,7 +184,7 @@ header a:hover {
 }
 
 .van-tile img {
-  max-width: 70%;
+  max-width: 40%;
   border-radius: 5px;
 }
 
@@ -270,6 +270,7 @@ i[class*='van-type-'] {
 }
 
 .van-detail img {
+  width: 50%;
   border-radius: 5px;
   margin-block: 47px;
 }
@@ -315,4 +316,10 @@ i[class*='van-type-'] {
   color: #161616;
   text-decoration: underline;
   font-weight: 600;
+}
+
+a.active-link {
+  font-weight: bold;
+  text-decoration: underline;
+  color: #161616;
 }
