--- a/src/index.css
+++ b/src/index.css
@@ -463,3 +463,27 @@ a.active-link {
   height: 100px;
   border-radius: 5px;
 }
+
+
+.link-button {
+  display: inline-block;
+  text-align: center;
+  text-decoration: none;
+  border: none;
+  padding: .75rem 1.375rem;
+  color: initial;
+  font-weight: 700;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: transform .1s ease-in-out;
+}
+
+.not-found-container {
+  padding-inline: 26px;
+}
+
+.not-found-container .link-button {
+  width: 20%;
+  background-color: #161616;
+  color: white;
+}
